Integrazione loadout armi e selezione con livellamento